<resources>
    <string name="app_name">EzyBanking</string>
    <string name="accounts">Accounts</string>
    <string name="pay_amp_transfer"><![CDATA[Pay&Transfer]]></string>
    <string name="transactions">Transactions</string>
    <string name="withdraw">Withdraw</string>
    <string name="top_up">Top Up</string>
    <string name="balance_0">Balance: $0</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="send_on">Send On</string>
</resources>