<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_amount"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_margin"
        android:gravity="center"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_amount"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:hint="$Amount"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="@+id/tv_amount"
        app:layout_constraintTop_toBottomOf="@id/tv_amount" />


    <TextView
        android:id="@+id/tv_description"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_margin"
        android:gravity="center"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_amount" />

    <EditText
        android:id="@+id/et_description"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:hint="Description"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />



    <TextView
        android:id="@+id/tv_date"
        style="@style/InfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_margin"
        android:gravity="center"
        android:text="@string/send_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <EditText
        android:id="@+id/et_date"
        style="@style/MyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="date"
        android:hint="DD/MM/YYYY"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/primary_margin"
        android:gravity="center"
        android:text="Submit Payment"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>