<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayBackground">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_up"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textSize="@dimen/text_size_title"
                android:gravity="center"
                style="@style/InfoTextStyle"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/tv_amount"
                style="@style/InfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary_margin"
                android:gravity="center"
                android:text="@string/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <EditText
                android:id="@+id/et_amount"
                style="@style/MyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:text="---"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                app:layout_constraintStart_toStartOf="@+id/tv_amount"
                app:layout_constraintTop_toBottomOf="@id/tv_amount" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginEnd="@dimen/primary_margin"
                android:background="@color/colorGrayBackground"
                app:layout_constraintTop_toBottomOf="@id/et_amount"/>

            <TextView
                android:id="@+id/tv_description"
                style="@style/InfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary_margin"
                android:gravity="center"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1" />

            <EditText
                android:id="@+id/et_description"
                style="@style/MyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:text="---"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                app:layout_constraintStart_toStartOf="@+id/tv_description"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/primary_margin"
                android:layout_marginEnd="@dimen/primary_margin"
                android:background="@color/colorGrayBackground"
                app:layout_constraintTop_toBottomOf="@id/et_description"/>


            <TextView
                android:id="@+id/tv_date"
                style="@style/InfoTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary_margin"
                android:gravity="center"
                android:text="@string/send_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line2" />

            <EditText
                android:id="@+id/et_date"
                style="@style/MyTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="date"
                android:text="---"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@id/tv_date" />

            <Button
                android:id="@+id/btn_check_transactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary_margin"
                android:gravity="center"
                android:text="Submit Payment"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>